Select element on ios fix

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -470,6 +470,7 @@ body {
           font-size: 16px;
           border: 1px solid #fad4a6;
           border-radius: 7px;
+          -webkit-appearance: none;
           @include mobile() {
             font-size: 2rem;
           }
